--- a/CookPopularControl/Themes/BaseStyle/CalenderBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/CalenderBaseStyle.xaml
@@ -427,7 +427,7 @@
         <Setter Property="CalendarDayButtonStyle" Value="{StaticResource CalendarDayButtonStyle}" />
         <Setter Property="CalendarItemStyle" Value="{StaticResource CalendarItemStyle}" />
         <Setter Property="Foreground" Value="{DynamicResource PrimaryForegroundBrush}" />
-        <Setter Property="Background" Value="{DynamicResource DefaultBackgroundBrush}" />
+        <Setter Property="Background" Value="{DynamicResource PrimaryBackgroundBrush}" />
         <Setter Property="BorderBrush" Value="DodgerBlue" />
         <Setter Property="BorderThickness" Value="2" />
         <Setter Property="Template">
