--- a/CookPopularControl/Themes/BaseStyle/TreeViewBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/TreeViewBaseStyle.xaml
@@ -155,7 +155,7 @@
     <Style x:Key="TreeViewBaseStyle" TargetType="{x:Type TreeView}">
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="BorderBrush" Value="{DynamicResource BorderBrush}" />
-        <Setter Property="Background" Value="{DynamicResource DefaultBackgroundBrush}" />
+        <Setter Property="Background" Value="{DynamicResource PrimaryBackgroundBrush}" />
         <Setter Property="OverridesDefaultStyle" Value="True" />
         <Setter Property="SnapsToDevicePixels" Value="True" />
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Auto" />
