--- a/CookPopularControl/Themes/NumericUpDownStyle.xaml
+++ b/CookPopularControl/Themes/NumericUpDownStyle.xaml
@@ -7,7 +7,7 @@
 
     <Style x:Key="DefaultNumericUpDownStyle" TargetType="{x:Type fields:NumericUpDown}">
         <Setter Property="Foreground" Value="{DynamicResource PrimaryForegroundBrush}" />
-        <Setter Property="Background" Value="{DynamicResource DefaultBackgroundBrush}" />
+        <Setter Property="Background" Value="{DynamicResource PrimaryBackgroundBrush}" />
         <Setter Property="BorderBrush" Value="{DynamicResource FieldBorderBrush}" />
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="Padding" Value="8,0,0,0" />
