--- a/CookPopularControl/Themes/BaseStyle/DataGridBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/DataGridBaseStyle.xaml
@@ -368,7 +368,7 @@
     </Style>
     <Style x:Key="DataGridComboBoxColumnEditingStyle" TargetType="{x:Type ComboBox}" BasedOn="{StaticResource ComboBoxBaseStyle}">
         <Setter Property="attached:SelectorAttached.SelectorItemType" Value="Default" />
-        <Setter Property="attached:SelectorAttached.ItemsListBackground" Value="{DynamicResource DefaultBackgroundBrush}" />
+        <Setter Property="attached:SelectorAttached.ItemsListBackground" Value="{DynamicResource PrimaryBackgroundBrush}" />
         <Setter Property="attached:SelectorAttached.ItemMouseOverBackground" Value="{DynamicResource PrimaryThemeBrush}" />
         <Setter Property="attached:FrameworkElementBaseAttached.CornerRadius" Value="2" />
         <Setter Property="comboBox:ComboBoxAssistant.DropDownButtonFill" Value="{DynamicResource PrimaryThemeBrush}" />
@@ -392,7 +392,7 @@
 
     <Style x:Key="DataGridBaseStyle" TargetType="{x:Type DataGrid}">
         <Setter Property="Foreground" Value="{DynamicResource PrimaryThemeBrush}" />
-        <Setter Property="Background" Value="{DynamicResource DefaultBackgroundBrush}" />
+        <Setter Property="Background" Value="{DynamicResource PrimaryBackgroundBrush}" />
         <Setter Property="BorderBrush" Value="{DynamicResource PrimaryThemeBrush}" />
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="RowHeight" Value="50" />
