--- a/CookPopularControl/Themes/BaseStyle/TimePickerBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/TimePickerBaseStyle.xaml
@@ -34,7 +34,7 @@
         <Setter Property="Height" Value="300" />
         <Setter Property="BorderBrush" Value="{DynamicResource PrimaryThemeBrush}" />
         <Setter Property="BorderThickness" Value="2" />
-        <Setter Property="Background" Value="{DynamicResource DefaultBackgroundBrush}" />
+        <Setter Property="Background" Value="{DynamicResource PrimaryBackgroundBrush}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type date:Clock}">
@@ -105,7 +105,7 @@
         <Setter Property="Height" Value="{DynamicResource DefaultControlHeight}" />
         <Setter Property="BorderBrush" Value="{DynamicResource FieldBorderBrush}" />
         <Setter Property="BorderThickness" Value="1" />
-        <Setter Property="Background" Value="{DynamicResource DefaultBackgroundBrush}" />
+        <Setter Property="Background" Value="{DynamicResource PrimaryBackgroundBrush}" />
         <Setter Property="date:ClockAssistant.IsAddConfirmButton" Value="True" />
         <Setter Property="Template">
             <Setter.Value>
