--- a/MvvmTestDemo/DemoViews/GroupBoxDemo.xaml
+++ b/MvvmTestDemo/DemoViews/GroupBoxDemo.xaml
@@ -25,7 +25,7 @@
             </GroupBox>
             <GroupBox pc:FrameworkElementBaseAttached.CornerRadius="0"
                       pc:FrameworkElementBaseAttached.IconGeometry="{StaticResource EyeGeometry}"
-                      pc:FrameworkElementBaseAttached.ShadowEffect="{StaticResource CustomShadowDepth3}"
+                      pc:FrameworkElementBaseAttached.ShadowEffect="{StaticResource ShadowEffectDepth3}"
                       Header="写代码的厨子"
                       Style="{DynamicResource CustomHeaderGroupBoxStyle}"
                       Width="300" Height="400"
