--- a/MvvmTestDemo/DemoViews/MenuDemo.xaml
+++ b/MvvmTestDemo/DemoViews/MenuDemo.xaml
@@ -20,31 +20,31 @@
     <ScrollViewer>
         <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Center">
 
-            <TextBox ContextMenu="{StaticResource DefaultContextMenu}"
+            <TextBox Width="200" Height="34"
                      Text="Chance"
-                     Width="200" Height="34"
+                     ContextMenu="{StaticResource DefaultContextMenu}"
                      Foreground="Red" />
 
             <Menu IsMainMenu="True" Margin="0,50">
                 <MenuItem Header="_Example">
                     <MenuItem Header="Close">
                         <MenuItem.Icon>
-                            <Path Data="{DynamicResource CloseGeometry}" Fill="{DynamicResource PrimaryForegroundBrush}" Stretch="Uniform" />
+                            <Path Stretch="Uniform" Data="{DynamicResource CloseGeometry}" Fill="{DynamicResource PrimaryForegroundBrush}" />
                         </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Header="Fatal">
                         <MenuItem.Icon>
-                            <Path Data="{DynamicResource FatalGeometry}" Fill="{DynamicResource PrimaryForegroundBrush}" Stretch="Uniform" />
+                            <Path Stretch="Uniform" Data="{DynamicResource FatalGeometry}" Fill="{DynamicResource PrimaryForegroundBrush}" />
                         </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Header="Leaf">
                         <MenuItem.Icon>
-                            <Path Data="{DynamicResource LeafGeometry}" Fill="{DynamicResource PrimaryForegroundBrush}" Stretch="Uniform" />
+                            <Path Stretch="Uniform" Data="{DynamicResource LeafGeometry}" Fill="{DynamicResource PrimaryForegroundBrush}" />
                         </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Header="Plane">
                         <MenuItem.Icon>
-                            <Path Data="{DynamicResource PlaneGeometry}" Fill="{DynamicResource PrimaryForegroundBrush}" Stretch="Uniform" />
+                            <Path Stretch="Uniform" Data="{DynamicResource PlaneGeometry}" Fill="{DynamicResource PrimaryForegroundBrush}" />
                         </MenuItem.Icon>
                     </MenuItem>
                     <Separator Height="5" Background="Red" />
@@ -60,24 +60,35 @@
                 <MenuItem Header="_Operation">
                     <MenuItem Command="Cut">
                         <MenuItem.Icon>
-                            <Path Data="{DynamicResource CutGeometry}" Fill="{DynamicResource PrimaryForegroundBrush}" Stretch="Uniform" />
+                            <Path Stretch="Uniform" Data="{DynamicResource CutGeometry}" Fill="{DynamicResource PrimaryForegroundBrush}" />
                         </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Command="Copy">
                         <MenuItem.Icon>
-                            <Path Data="{DynamicResource CopyGeometry}" Fill="{DynamicResource PrimaryForegroundBrush}" Stretch="Uniform" />
+                            <Path Stretch="Uniform" Data="{DynamicResource CopyGeometry}" Fill="{DynamicResource PrimaryForegroundBrush}" />
                         </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Command="Paste">
                         <MenuItem.Icon>
-                            <Path Data="{DynamicResource PasteGeometry}" Fill="{DynamicResource PrimaryForegroundBrush}" Stretch="Uniform" />
+                            <Path Stretch="Uniform" Data="{DynamicResource PasteGeometry}" Fill="{DynamicResource PrimaryForegroundBrush}" />
                         </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Command="SelectAll">
                         <MenuItem.Icon>
-                            <Path Data="{DynamicResource SelectAllGeometry}" Fill="{DynamicResource PrimaryForegroundBrush}" Stretch="Uniform" />
+                            <Path Stretch="Uniform" Data="{DynamicResource SelectAllGeometry}" Fill="{DynamicResource PrimaryForegroundBrush}" />
                         </MenuItem.Icon>
                     </MenuItem>
+                </MenuItem>
+                <MenuItem Header="File">
+                    <MenuItem Header="Open" Icon="{x:Null}" />
+                    <MenuItem Header="Save As" />
+                    <Separator />
+                    <MenuItem Header="Property" />
+                    <MenuItem Header="Select Physical Define File" />
+                    <Separator />
+                    <MenuItem Header="Clear File Name List" />
+                    <Separator />
+                    <MenuItem Header="Exit" />
                 </MenuItem>
             </Menu>
 
